syntax = "proto3";

package workhorse;

service MultilateralVisualizer {
    // A return value with keyword "stream" tells gRPC that the
    // function returns multiple times. Like subscribing to a flow of data.
    rpc read_frames (ReadFramesRequest) returns (stream FrameData);
}

message ReadFramesRequest {
    // Empty
}

message Voxel {
    string color = 1;
    int64 x = 2;
    int64 y = 3;
    int64 z = 4;
}

message FrameData {
    repeated Voxel voxels = 1;
}
